Fix transition number z-index and position

--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -43,6 +43,8 @@ body {
 
 .uppon {
     margin-bottom: 0;
+    position: relative;
+    z-index: 1;
 }
 
 .pictures {
